[package]
name = "reverse-tcp"
version = "0.1.0"
authors = ["Enno Boland <g@s01.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["full"] }
getopts = "0.2"
futures = "0.3"
sha2 = "0.8.0"
getrandom = "0.1.13"
tokio-timer = "0.3.0-alpha.5"
